logica del crud lista