@@ -1,22 +1,30 @@
 package com.ejemplo.practica2.service;
 
+import com.ejemplo.practica2.model.Rol;
 import com.ejemplo.practica2.model.Usuario;
 import com.ejemplo.practica2.repository.UsuarioRepository;
+import com.ejemplo.practica2.security.JwtUtil;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
-public class UsuarioService implements UserDetailsService {
+public class UsuarioService implements UserDetailsService {  // ✅ Implementa UserDetailsService
 
     private final UsuarioRepository usuarioRepository;
+    private final JwtUtil jwtUtil;
+    private final PasswordEncoder passwordEncoder;
 
-    public UsuarioService(UsuarioRepository usuarioRepository) {
+    public UsuarioService(UsuarioRepository usuarioRepository, JwtUtil jwtUtil, PasswordEncoder passwordEncoder) {
         this.usuarioRepository = usuarioRepository;
+        this.jwtUtil = jwtUtil;
+        this.passwordEncoder = passwordEncoder;
     }
 
     @Override
@@ -24,7 +32,30 @@ public class UsuarioService implements UserDetailsService {
         Usuario usuario = usuarioRepository.findByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado: " + username));
 
-        return new User(usuario.getUsername(), usuario.getPassword(), Collections.emptyList());
+        return new User(usuario.getUsername(), usuario.getPassword(),
+                List.of(new SimpleGrantedAuthority("ROLE_" + usuario.getRol().name())));
     }
 
+    public Usuario obtenerUsuario(String username) {
+        return usuarioRepository.findByUsername(username)
+                .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado: " + username));
+    }
+
+    public Usuario registrarUsuario(String username, String password, Rol rol) {
+        if (usuarioRepository.findByUsername(username).isPresent()) {
+            throw new RuntimeException("El usuario ya existe.");
+        }
+
+        Usuario usuario = new Usuario();
+        usuario.setUsername(username);
+        usuario.setPassword(passwordEncoder.encode(password)); // 🔒 Encriptamos la contraseña
+        usuario.setRol(rol);
+
+        return usuarioRepository.save(usuario);
+    }
+
+    public String generarToken(String username) {
+        UserDetails userDetails = loadUserByUsername(username);
+        return jwtUtil.generateToken(userDetails);
+    }
 }
